--- a/src/components/Button/Botao.module.scss
+++ b/src/components/Button/Botao.module.scss
@@ -3,14 +3,15 @@
     background-color: #756AB6;
     border-radius: 10px;
     box-shadow: 2px 4px 4px #0000009F;
-    color: #272626;
+    color: #fff;
     cursor: pointer;
     font-size: 1.25rem;
+    font-weight: 400;
     padding: 16px;
     width: 150px;
     
     &:active {
-      background-color: #7CA6B7;
+      background-color: #6f64b1;
       box-shadow: 2px 2px 4px #0000009F inset;
     }
   }
