finalizando selecionar tarefa

--- a/src/components/Lista/Lista.module.scss
+++ b/src/components/Lista/Lista.module.scss
@@ -52,7 +52,7 @@
   }
   
   .itemSelecionado {
-    background-color: #292929;
+    background-color: #5a4d9e;
     box-shadow: 2px 4px 4px #0000009F inset;
   }
   
