alura studies finalizado cronômetro minutos e segundos

--- a/src/components/Cronometro/Cronometro.module.scss
+++ b/src/components/Cronometro/Cronometro.module.scss
@@ -45,7 +45,8 @@
     @media screen and (min-width:1280px) {
       
       .relogioWrapper{
-        font-size: 10rem;
+        font-size: 12rem;
+        text-align: center;
       }
   
       p {
