--- a/src/components/Lista/Item/Item.module.scss
+++ b/src/components/Lista/Item/Item.module.scss
@@ -27,7 +27,7 @@
   }
   
   .itemCompletado {
-    background-color: #566F42;
+    background-color: #7eca40;
     cursor: auto;
   
     .concluido {
